fixed slider and added gaps between blocks

--- a/src/scss/components/about_us/about_us-media.scss
+++ b/src/scss/components/about_us/about_us-media.scss
@@ -1,3 +1,11 @@
+@media screen and (max-width: $breakpoint-xl) {
+  .about-us {
+    &__text {
+      margin: 0 30px 0 0;
+    }
+  }
+}
+
 @media screen and (max-width: $breakpoint-lg) {
   .about-us {
     margin-top: 0;
@@ -12,6 +20,7 @@
       @extend %flexColumn;
       flex: 1 1 100%;
       margin: 0;
+      max-width: 100%;
 
       .about-us__title {
         @extend %sectionTitle;
