--- a/src/scss/components/contact/contact-media.scss
+++ b/src/scss/components/contact/contact-media.scss
@@ -1,3 +1,11 @@
+@media screen and (max-width: $breakpoint-xl) {
+  .contact {
+    &__content {
+      column-gap: 30px;
+    }
+  }
+}
+
 @media screen and (max-width: $breakpoint-lg) {
   .contact {
     margin-bottom: 100px;
